<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_login"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <EditText
        android:id="@+id/et_login"
        android:layout_below="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login" />

    <TextView
        android:id="@+id/tv_senha"
        android:layout_below="@+id/et_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/txt_senha"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <EditText
        android:id="@+id/et_senha"
        android:layout_below="@+id/tv_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_senha" />

    <Button
        android:id="@+id/bt_login"
        android:layout_below="@+id/et_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:style="@style/Fiap.Botao"
        android:onClick="logar"
        android:text="@string/bt_login" />


</RelativeLayout>
